# aicage

./: .bandit.yml  .checkov.yml  .cspell.json  .gitignore  .hadolint.yaml  .isort.cfg  .markdownlint.json  .mega-linter.yml  .mypy.ini  .pylintrc  .trivyignore.yaml  AGENTS.md  CHANGELOG.md  CONFIG.md  DEVELOPMENT.md  README.md  lychee.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/actions/verify-cosign-image/: action.yml
.github/workflows/: change-validation.yml  ci_lint.yml  integration-test-macos-full.yml  integration-test-macos-hosted.yml  integration-test-proxy-macos-hosted.yml  integration-test-proxy.yml  integration-test-windows-single.yml  integration-test.yml  lint-and-test.yml  release.yml  test-suite.yml
config/textual/overview/: app.tcss
config/validation/: base.schema.json  extension.schema.json
doc/: custom-agents.md  custom-base-images.md  integration-tests.md  python-test-structure-guidelines.md
doc/ai/: ghcr-cleanup-issue-oci-referrer-cosign-subject.md  ghcr-cosign-signature-analysis-clean.md
doc/ideas/: IDEAS.md
doc/tests-on-Mac/: aicage-tests-on-Mac.md
scripts/: get-aicage-release-artifact.sh  lint.sh  sync-with-aicage-image-projects.sh
scripts/debug/: check-src-vs-test-files.sh  count_aicage_tags.sh  debug-print-agent_path.sh  find-dup-defs.sh  get-remote-digest-anon.sh  gh-cancel-actions-runs.sh  gh-delete-actions-runs.sh  ghcr-tag-sizes.sh  lint.ps1  run-debug-print-agent_path.sh  show-sbom.sh
src/aicage/: _network.py  _proxy.py  cli_types.py  constants.py  errors.py  paths.py
tests/: conftest.py
tests/aicage/: _run_config_fixtures.py  test__network.py  test__proxy.py
tests/repo_rules/: test_structure.py  test_visibility.py
wiki/: Base-Image-Tooling.md  CLI-Options.md  Customization-Agents.md  Customization-Base-Images.md  Customization-Extensions.md  Customization.md  Docker-Args.md  Entrypoint-Contract.md  Home.md  Host-Networking.md  How-It-Works.md  How-To-Debug.md  Images.md  Known-Hiccups.md  Security-and-Trust.md  Updates.md  _Sidebar.md
wiki/screenshots/: screenshots.md
(+466 files in other folders)
